--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 			</div>
 			
 			<div class="col">
-				<h1><a href="https://learncodeweb.com/phonegap/how-to-use-instascan-an-html5-qr-scanner/">How to use Instascan an HTML5 QR scanner</a></h1>
+				<h1>How to use Instascan an HTML5 QR scanner</h1>
 				<div class="col-sm-12">
-					<video id="preview" class="p-1 border" style="width:100%;"></video>
+					<video id="preview" style="width:320px;height:240px;"></video>
 				</div>
         			<script type="text/javascript">
 
