--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 				</script>
 				<div class="btn-group btn-group-toggle mb-5" data-toggle="buttons">
 				  <label class="btn btn-primary active">
-					<input type="radio" name="options" value="1" autocomplete="off" checked> Front Camera
+					<input type="radio" name="options" value="1" autocomplete="off"> Front Camera
 				  </label>
 				  <label class="btn btn-secondary">
-					<input type="radio" name="options" value="2" autocomplete="off"> Back Camera
+					<input type="radio" name="options" value="2" autocomplete="off" checked> Back Camera
 				  </label>
 				</div>
 			</div>
