--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		});
 		Instascan.Camera.getCameras().then(function (cameras){
 			if(cameras.length>0){
-				scanner.start(cameras[0]);
+				//scanner.start(cameras[0]);
 				$('[name="options"]').on('change',function(){
 					if($(this).val()==1){
 						if(cameras[0]!=""){
