--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 			if(cameras.length>0){
 				//scanner.start(cameras[0]);
 				$('[name="options"]').on('change',function(){
+					alert($(this).val());
 					if($(this).val()==1){
 						if(cameras[0]!=""){
 							scanner.start(cameras[0]);
