--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="col-sm-3">
 			</div>			
 			<div class="col">
-				<h1>How to use Instascan an HTML5 QR scanner</h1>
+				<h1>取得した値 <span id="span1"></span></h1>
 				<div class="col-sm-12">
 					<video id="preview" style="width:320px;height:240px;"></video>
 				</div>
@@ -47,15 +47,18 @@
 		</div>
 	</div>
 	<script type="text/javascript">
-		var scanner = new Instascan.Scanner({ video: document.getElementById('preview'), scanPeriod: 5, mirror: false });
+		var scanner = new x ({ video: document.getElementById('preview'), scanPeriod: 5, mirror: false });
 		scanner.addListener('scan',function(content){
-			alert(content);
+      document.getElementById("span1").textContent = content;
+			//alert(content);
 			//window.location.href=content;
 		});
 		Instascan.Camera.getCameras().then(function (cameras){
 			if(cameras.length>0){
-				//scanner.start(cameras[0]);
+        alert(cameras.length);
+				scanner.start(cameras[0]);
 				$('[name="options"]').on('change',function(){
+          alert(cameras.length);
 					alert($(this).val());
 					if($(this).val()==1){
 						if(cameras[0]!=""){
