--- a/index.html
+++ b/index.html
@@ -1,19 +1,9 @@
 
-<html>
+<html lang="ja">
     <head>
       <meta charset="utf-8">
       <title>jsQR Demo</title>
       <script src="js/jsQR.js"></script>
-      <script>
-		<!-- service workerの登録関係 -->
-		if ('serviceWorker' in navigator) {
-			navigator.serviceWorker.register('service_worker.js').then(function(registration) {
-			console.log('ServiceWorker registration successful with scope: ', registration.scope);
-		}).catch(function(err) {
-			console.log('ServiceWorker registration failed: ', err);
-		});
-		}		
-	  </script>
       <link href="https://fonts.googleapis.com/css?family=Ropa+Sans" rel="stylesheet">
       <link rel="manifest" href="manifest.json">
       <style>
@@ -74,7 +64,16 @@
         <div hidden><b>Data:</b> <span id="outputData"></span></div>
       </div>
       <script>
-        var video = document.createElement("video");
+	<!-- service workerの登録関係 -->
+	if ('serviceWorker' in navigator) {
+		navigator.serviceWorker.register('service_worker.js').then(function(registration) {
+		console.log('ServiceWorker registration successful with scope: ', registration.scope);
+	}).catch(function(err) {
+		console.log('ServiceWorker registration failed: ', err);
+	});
+	}		
+	      
+	var video = document.createElement("video");
         var canvasElement = document.getElementById("canvas");
         var canvas = canvasElement.getContext("2d");
         var loadingMessage = document.getElementById("loadingMessage");
