--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         });
     
         function tick() {
+	  viodeo.play();
           loadingMessage.innerText = "⌛ Loading video..."
           if (video.readyState === video.HAVE_ENOUGH_DATA) {
             loadingMessage.hidden = true;
