--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	      
 	      video.autoplay = true;
         video.controls = true;
-        video.style.visibility ="hidden";
+        //video.style.visibility ="hidden";
         canvasElement.style.visibility = "hidden";
     
         function drawLine(begin, end, color) {
