--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         let outputData2 = document.getElementById("outputData2");
         let prevCode = "";
 	      
-	      video.autoplay = true;
-        video.controls = true;
+	video.autoplay = true;
+        //video.controls = true;
         //video.style.visibility ="hidden";
-        canvasElement.style.visibility = "hidden";
+        //canvasElement.style.visibility = "hidden";
     
         function drawLine(begin, end, color) {
           canvas.beginPath();
