--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           video.srcObject = stream;
           video.setAttribute("playsinline", true); // required to tell iOS safari we don't want fullscreen
           video.play();
-          //requestAnimationFrame(tick);
+          requestAnimationFrame(tick);
         });
     
         function tick() {
@@ -95,10 +95,10 @@
             });
             if (code) {
               if(code!=prevCode){
-                drawLine(code.location.topLeftCorner, code.location.topRightCorner, "#FF3B58");
-                drawLine(code.location.topRightCorner, code.location.bottomRightCorner, "#FF3B58");
-                drawLine(code.location.bottomRightCorner, code.location.bottomLeftCorner, "#FF3B58");
-                drawLine(code.location.bottomLeftCorner, code.location.topLeftCorner, "#FF3B58");
+                //drawLine(code.location.topLeftCorner, code.location.topRightCorner, "#FF3B58");
+                //drawLine(code.location.topRightCorner, code.location.bottomRightCorner, "#FF3B58");
+                //drawLine(code.location.bottomRightCorner, code.location.bottomLeftCorner, "#FF3B58");
+                //drawLine(code.location.bottomLeftCorner, code.location.topLeftCorner, "#FF3B58");
                 outputMessage.hidden = true;
                 outputData.parentElement.hidden = false;
                 outputData.innerText = code.data;
