--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     </head>
     <body>
-      <h1>jsQR Demo 2</h1>
+      <h1>jsQR Demo 3</h1>
       <p><input type="button" value="Start" onclick="tick()" /></p>
       <p><input type="button" value="Video" onclick="video_on()" /></p>
       <p>Pure JavaScript QR code decoding library.</p>
@@ -48,6 +48,7 @@
     video.autoplay = true;
     video.style.visibility ="hidden";
     video.visibility=false;
+    video_on();
 
     canvasElement.style.visibility = "visible";
     canvasElement.visibility=true;
@@ -92,11 +93,11 @@
             canvasElement.width = video.videoWidth;
             canvas.drawImage(video, 0, 0, canvasElement.width, canvasElement.height);
             imageData = canvas.getImageData(0, 0, canvasElement.width, canvasElement.height);
-/*
+
 	    code = jsQR(imageData.data, imageData.width, imageData.height, {
               inversionAttempts: "dontInvert",
             });
-*/
+
             if (code) {
               if(code!=prevCode){
                 //drawLine(code.location.topLeftCorner, code.location.topRightCorner, "#FF3B58");
